@@ -11,7 +11,6 @@ import net.minecraft.world.level.block.Blocks;
 import org.confluence.lib.common.data.gen.AbstractRecipeProvider;
 import org.confluence.mod.Confluence;
 import org.confluence.mod.common.data.Keys;
-import org.confluence.mod.common.init.ModTags;
 import org.confluence.mod.common.init.block.CrateBlocks;
 import org.confluence.mod.common.init.block.ModBlocks;
 import org.confluence.mod.common.init.block.NatureBlocks;
@@ -29,6 +28,7 @@ import org.confluence.terraentity.registries.npc_trade.variant.TradeTask;
 import org.confluence.terraentity.registries.npc_trade_task.variant.DynamicAnglerTradeTask;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -157,24 +157,18 @@ public class NPCShopProvider extends AbstractRecipeProvider {
                 .build());
 
         shop(TENpcEntities.ANGLER.getId()).addRecipe(new Builder()
-                // 渔夫任务
-                .add(TradeTask.create(
-                        DynamicAnglerTradeTask.builder(
-                                        ItemTradeLootTable.builder()
-                                                .addCost(CrateBlocks.WOODEN_CRATE.toStack().getItem(),1) //在没有任务鱼机制前，用木匣代替
-                                                .setLootTable(TerraEntity.fromSpaceAndPath("confluence", "gameplay/fishing_quests_0"))
-                                                .setSprite(TerraEntity.space("random_gift"))
-                                                .build(),
-                                        List.of(Items.DIRT.getDefaultInstance(), Items.ICE.getDefaultInstance(), Items.EMERALD.getDefaultInstance())
-                                )
-                                .addResult(10, List.of(ArmorItems.ANGLER_HAT.toStack()))
-                                .addResult(15, List.of(ArmorItems.ANGLER_VEST.toStack()))
-                                .addResult(20, List.of(ArmorItems.ANGLER_PANTS.toStack()))
-                                .addResult(25, List.of(ToolItems.BOTTOMLESS_WATER_BUCKET.toStack()))
-                                .addResult(30, List.of(FishingPoleItems.GOLDEN_FISHING_ROD.toStack()))
-//                                .setTitle("title.terra_entity.npc_trade.task.fishman")
-                                .build()
-                ))
+                .add(TradeTask.create(DynamicAnglerTradeTask.builder(ItemTradeLootTable.builder()
+                                .addCost(CrateBlocks.WOODEN_CRATE.toStack()) // 在没有任务鱼机制前，用木匣代替
+                                .setLootTable(Confluence.asResource("gameplay/fishing_quests_0"))
+                                .setSprite(TerraEntity.space("random_gift"))
+                                .build(), List.of(Items.DIRT.getDefaultInstance(), Items.ICE.getDefaultInstance(), Items.EMERALD.getDefaultInstance()))
+                        .addResult(10, Collections.singletonList(ArmorItems.ANGLER_HAT.toStack()))
+                        .addResult(15, Collections.singletonList(ArmorItems.ANGLER_VEST.toStack()))
+                        .addResult(20, Collections.singletonList(ArmorItems.ANGLER_PANTS.toStack()))
+                        .addResult(25, Collections.singletonList(ToolItems.BOTTOMLESS_WATER_BUCKET.toStack()))
+                        .addResult(30, Collections.singletonList(FishingPoleItems.GOLDEN_FISHING_ROD.toStack()))
+//                        .setTitle("title.terra_entity.npc_trade.task.fishman")
+                        .build()))
                 .build());
     }
 
